@@ -2,7 +2,7 @@
  *
  * The MIT License
  *
- * Copyright 2020-2022 Paul Conti
+ * Copyright 2018-2022 Paul Conti
  *
  * Permission is hereby granted, free of charge, to any person obtaining a copy
  * of this software and associated documentation files (the "Software"), to deal
@@ -23,7 +23,7 @@
  * THE SOFTWARE.
  *
  */
-package Image2C.common;
+package image2C.common;
 
 import java.io.File;
 import java.io.FileWriter;
@@ -150,7 +150,7 @@ public class CArrayOutputStream {
    *          the v
    */
   public void writeShort(int data, boolean bLast) {
-    short v = new Integer(data).shortValue();
+    short v = Integer.valueOf(data).shortValue();
     if (!bLittleEndian) {
       v = convertShortBigEndian(v);
     }
